spring-boot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot # {"$kpt-set":"service-name"}
spec:
  type: NodePort  
  selector:
    app: spring-boot # {"$kpt-set":"service-name"}
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
